--- a/contrib/other-builds/kenlm.vcxproj
+++ b/contrib/other-builds/kenlm.vcxproj
@@ -22,29 +22,19 @@
     <None Include="..\..\lm\bhiksha.hh" />
     <None Include="..\..\lm\binary_format.hh" />
     <None Include="..\..\lm\blank.hh" />
-    <None Include="..\..\lm\clean.sh" />
-    <None Include="..\..\lm\compile.sh" />
     <None Include="..\..\lm\config.hh" />
-    <None Include="..\..\lm\COPYING" />
-    <None Include="..\..\lm\COPYING.LESSER" />
     <None Include="..\..\lm\enumerate_vocab.hh" />
     <None Include="..\..\lm\facade.hh" />
-    <None Include="..\..\lm\Jamfile" />
     <None Include="..\..\lm\left.hh" />
-    <None Include="..\..\lm\LICENSE" />
     <None Include="..\..\lm\lm_exception.hh" />
     <None Include="..\..\lm\max_order.hh" />
     <None Include="..\..\lm\model.hh" />
     <None Include="..\..\lm\model_type.hh" />
     <None Include="..\..\lm\quantize.hh" />
-    <None Include="..\..\lm\README" />
     <None Include="..\..\lm\read_arpa.hh" />
     <None Include="..\..\lm\return.hh" />
     <None Include="..\..\lm\search_hashed.hh" />
     <None Include="..\..\lm\search_trie.hh" />
-    <None Include="..\..\lm\test.arpa" />
-    <None Include="..\..\lm\test.sh" />
-    <None Include="..\..\lm\test_nounk.arpa" />
     <None Include="..\..\lm\trie.hh" />
     <None Include="..\..\lm\trie_sort.hh" />
     <None Include="..\..\lm\value.hh" />
@@ -55,22 +45,20 @@
     <None Include="..\..\lm\word_index.hh" />
     <None Include="..\..\util\bit_packing.hh" />
     <None Include="..\..\util\check.hh" />
-    <None Include="..\..\util\COPYING" />
-    <None Include="..\..\util\COPYING.LESSER" />
     <None Include="..\..\util\ersatz_progress.hh" />
     <None Include="..\..\util\exception.hh" />
     <None Include="..\..\util\file.hh" />
     <None Include="..\..\util\file_piece.hh" />
     <None Include="..\..\util\getopt.hh" />
     <None Include="..\..\util\have.hh" />
-    <None Include="..\..\util\Jamfile" />
     <None Include="..\..\util\joint_sort.hh" />
     <None Include="..\..\util\key_value_packing.hh" />
-    <None Include="..\..\util\LICENSE" />
     <None Include="..\..\util\mmap.hh" />
     <None Include="..\..\util\murmur_hash.hh" />
+    <None Include="..\..\util\pool.hh" />
     <None Include="..\..\util\probing_hash_table.hh" />
     <None Include="..\..\util\proxy_iterator.hh" />
+    <None Include="..\..\util\read_compressed.hh" />
     <None Include="..\..\util\scoped.hh" />
     <None Include="..\..\util\sized_iterator.hh" />
     <None Include="..\..\util\sorted_uniform.hh" />
@@ -80,12 +68,10 @@
   <ItemGroup>
     <ClCompile Include="..\..\lm\bhiksha.cc" />
     <ClCompile Include="..\..\lm\binary_format.cc" />
-    <ClCompile Include="..\..\lm\build_binary.cc" />
     <ClCompile Include="..\..\lm\config.cc" />
     <ClCompile Include="..\..\lm\left_test.cc" />
     <ClCompile Include="..\..\lm\lm_exception.cc" />
     <ClCompile Include="..\..\lm\model.cc" />
-    <ClCompile Include="..\..\lm\ngram_query.cc" />
     <ClCompile Include="..\..\lm\quantize.cc" />
     <ClCompile Include="..\..\lm\read_arpa.cc" />
     <ClCompile Include="..\..\lm\search_hashed.cc" />
@@ -103,6 +89,9 @@
     <ClCompile Include="..\..\util\getopt.c" />
     <ClCompile Include="..\..\util\mmap.cc" />
     <ClCompile Include="..\..\util\murmur_hash.cc" />
+    <ClCompile Include="..\..\util\pool.cc" />
+    <ClCompile Include="..\..\util\read_compressed.cc" />
+    <ClCompile Include="..\..\util\string_piece.cc" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{A5402E0B-6ED7-465C-9669-E4124A0CDDCB}</ProjectGuid>
@@ -114,6 +103,7 @@
     <ConfigurationType>StaticLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
@@ -125,6 +115,7 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
+    <PlatformToolset>v110</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>StaticLibrary</ConfigurationType>
@@ -133,8 +124,7 @@
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
-  <ImportGroup Label="ExtensionSettings">
-  </ImportGroup>
+  <ImportGroup Label="ExtensionSettings" />
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
@@ -149,13 +139,19 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\Program Files\boost\boost_1_47;$(IncludePath)</IncludePath>
+    <IncludePath>C:\boost\include\boost-1_52;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\boost\lib;$(VCInstallDir)lib;$(VCInstallDir)atlmfc\lib;$(WindowsSDK_LibraryPath_x86);</LibraryPath>
+    <OutDir>$(SolutionDir)$(Configuration)\kenlm\</OutDir>
+    <IntDir>$(Configuration)\kenlm\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>C:\Program Files\boost\boost_1_47;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>C:\Program Files\boost\boost_1_47;$(IncludePath)</IncludePath>
+    <IncludePath>C:\boost\include\boost-1_52;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\boost\lib;$(VCInstallDir)lib;$(VCInstallDir)atlmfc\lib;$(WindowsSDK_LibraryPath_x86);</LibraryPath>
+    <OutDir>$(SolutionDir)$(Configuration)\kenlm\</OutDir>
+    <IntDir>$(Configuration)\kenlm\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>C:\Program Files\boost\boost_1_47;$(IncludePath)</IncludePath>
@@ -166,25 +162,8 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WITH_THREADS;NO_PIPES;WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Program Files\boost\boost_1_51;$(SolutionDir)/../..</AdditionalIncludeDirectories>
-    </ClCompile>
-    <Link>
-      <SubSystem>Windows</SubSystem>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
-    </Link>
-    <Lib>
-      <AdditionalLibraryDirectories>C:\Program Files\boost\boost_1_51\lib</AdditionalLibraryDirectories>
-    </Lib>
-  </ItemDefinitionGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <ClCompile>
-      <PrecompiledHeader>
-      </PrecompiledHeader>
-      <WarningLevel>Level3</WarningLevel>
-      <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WITH_THREADS;NO_PIPES;WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Program Files\boost\boost_1_51;$(SolutionDir)/../..</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>KENLM_MAX_ORDER=6;WITH_THREADS;NO_PIPES;WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(SolutionDir)/../..</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -202,8 +181,8 @@
       <Optimization>MaxSpeed</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
-      <PreprocessorDefinitions>WITH_THREADS;NO_PIPES;WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\boost\boost_1_47;$(SolutionDir)/../..</AdditionalIncludeDirectories>
+      <PreprocessorDefinitions>KENLM_MAX_ORDER=6;WITH_THREADS;NO_PIPES;WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(SolutionDir)/../..</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -233,6 +212,5 @@
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
-  <ImportGroup Label="ExtensionTargets">
-  </ImportGroup>
+  <ImportGroup Label="ExtensionTargets" />
 </Project>
