--- a/contrib/other-builds/moses/.project
+++ b/contrib/other-builds/moses/.project
@@ -1357,11 +1357,6 @@
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
 		<link>
-			<name>TranslationModel/CompactPT</name>
-			<type>2</type>
-			<locationURI>PARENT-8-PROJECT_LOC/home/s0565741/workspace/github/hh/moses/TranslationModel/CompactPT</locationURI>
-		</link>
-		<link>
 			<name>LM/bin/gcc-4.6</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
@@ -1372,12 +1367,167 @@
 			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/bin/lm.log</locationURI>
 		</link>
 		<link>
+			<name>TranslationModel/CompactPt/BlockHashIndex.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/BlockHashIndex.cpp</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/BlockHashIndex.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/BlockHashIndex.h</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/CanonicalHuffman.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/CanonicalHuffman.h</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/CmphStringVectorAdapter.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/CmphStringVectorAdapter.cpp</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/CmphStringVectorAdapter.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/CmphStringVectorAdapter.h</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/ConsistentPhrases.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/ConsistentPhrases.h</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/Jamfile</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/Jamfile</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/LexicalReorderingTableCompact.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/LexicalReorderingTableCompact.cpp</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/LexicalReorderingTableCompact.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/LexicalReorderingTableCompact.h</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/LexicalReorderingTableCreator.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/LexicalReorderingTableCreator.cpp</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/LexicalReorderingTableCreator.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/LexicalReorderingTableCreator.h</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/ListCoders.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/ListCoders.h</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/MmapAllocator.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/MmapAllocator.h</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/MonotonicVector.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/MonotonicVector.h</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/MurmurHash3.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/MurmurHash3.cpp</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/MurmurHash3.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/MurmurHash3.h</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/PackedArray.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/PackedArray.h</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/PhraseDecoder.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/PhraseDecoder.cpp</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/PhraseDecoder.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/PhraseDecoder.h</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/PhraseDictionaryCompact.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/PhraseDictionaryCompact.cpp</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/PhraseDictionaryCompact.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/PhraseDictionaryCompact.h</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/PhraseTableCreator.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/PhraseTableCreator.cpp</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/PhraseTableCreator.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/PhraseTableCreator.h</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/StringVector.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/StringVector.h</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/TargetPhraseCollectionCache.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/TargetPhraseCollectionCache.h</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/ThrowingFwrite.cpp</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/ThrowingFwrite.cpp</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/ThrowingFwrite.h</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/ThrowingFwrite.h</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/bin</name>
+			<type>2</type>
+			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
 			<name>LM/bin/gcc-4.6/release</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
 		<link>
+			<name>TranslationModel/CompactPt/bin/gcc-4.7</name>
+			<type>2</type>
+			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/bin/pt.log</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/bin/pt.log</locationURI>
+		</link>
+		<link>
 			<name>LM/bin/gcc-4.6/release/debug-symbols-on</name>
+			<type>2</type>
+			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/bin/gcc-4.7/release</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
@@ -1387,7 +1537,17 @@
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
 		<link>
+			<name>TranslationModel/CompactPt/bin/gcc-4.7/release/debug-symbols-on</name>
+			<type>2</type>
+			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
 			<name>LM/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi</name>
+			<type>2</type>
+			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/bin/gcc-4.7/release/debug-symbols-on/link-static</name>
 			<type>2</type>
 			<locationURI>virtual:/virtual</locationURI>
 		</link>
@@ -1400,6 +1560,56 @@
 			<name>LM/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/ORLM.o</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/moses/LM/bin/gcc-4.6/release/debug-symbols-on/link-static/threading-multi/ORLM.o</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/bin/gcc-4.7/release/debug-symbols-on/link-static/threading-multi</name>
+			<type>2</type>
+			<locationURI>virtual:/virtual</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/bin/gcc-4.7/release/debug-symbols-on/link-static/threading-multi/BlockHashIndex.o</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/bin/gcc-4.7/release/debug-symbols-on/link-static/threading-multi/BlockHashIndex.o</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/bin/gcc-4.7/release/debug-symbols-on/link-static/threading-multi/CmphStringVectorAdapter.o</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/bin/gcc-4.7/release/debug-symbols-on/link-static/threading-multi/CmphStringVectorAdapter.o</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/bin/gcc-4.7/release/debug-symbols-on/link-static/threading-multi/LexicalReorderingTableCompact.o</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/bin/gcc-4.7/release/debug-symbols-on/link-static/threading-multi/LexicalReorderingTableCompact.o</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/bin/gcc-4.7/release/debug-symbols-on/link-static/threading-multi/LexicalReorderingTableCreator.o</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/bin/gcc-4.7/release/debug-symbols-on/link-static/threading-multi/LexicalReorderingTableCreator.o</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/bin/gcc-4.7/release/debug-symbols-on/link-static/threading-multi/MurmurHash3.o</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/bin/gcc-4.7/release/debug-symbols-on/link-static/threading-multi/MurmurHash3.o</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/bin/gcc-4.7/release/debug-symbols-on/link-static/threading-multi/PhraseDecoder.o</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/bin/gcc-4.7/release/debug-symbols-on/link-static/threading-multi/PhraseDecoder.o</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/bin/gcc-4.7/release/debug-symbols-on/link-static/threading-multi/PhraseDictionaryCompact.o</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/bin/gcc-4.7/release/debug-symbols-on/link-static/threading-multi/PhraseDictionaryCompact.o</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/bin/gcc-4.7/release/debug-symbols-on/link-static/threading-multi/PhraseTableCreator.o</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/bin/gcc-4.7/release/debug-symbols-on/link-static/threading-multi/PhraseTableCreator.o</locationURI>
+		</link>
+		<link>
+			<name>TranslationModel/CompactPt/bin/gcc-4.7/release/debug-symbols-on/link-static/threading-multi/ThrowingFwrite.o</name>
+			<type>1</type>
+			<locationURI>PARENT-3-PROJECT_LOC/moses/TranslationModel/CompactPT/bin/gcc-4.7/release/debug-symbols-on/link-static/threading-multi/ThrowingFwrite.o</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
