--- a/contrib/other-builds/search/.project
+++ b/contrib/other-builds/search/.project
@@ -23,7 +23,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildArguments</key>
-					<value>-j3</value>
+					<value></value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildCommand</key>
@@ -92,11 +92,6 @@
 			<locationURI>PARENT-3-PROJECT_LOC/search/applied.hh</locationURI>
 		</link>
 		<link>
-			<name>bin</name>
-			<type>2</type>
-			<locationURI>virtual:/virtual</locationURI>
-		</link>
-		<link>
 			<name>config.hh</name>
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/search/config.hh</locationURI>
@@ -163,61 +158,9 @@
 		</link>
 		<link>
 			<name>vertex_generator.hh</name>
-<<<<<<< HEAD
 			<type>1</type>
 			<locationURI>PARENT-3-PROJECT_LOC/search/vertex_generator.hh</locationURI>
 		</link>
-		<link>
-			<name>bin/gcc-4.5</name>
-			<type>2</type>
-			<locationURI>virtual:/virtual</locationURI>
-		</link>
-		<link>
-			<name>bin/gcc-4.5/release</name>
-			<type>2</type>
-			<locationURI>virtual:/virtual</locationURI>
-		</link>
-		<link>
-			<name>bin/gcc-4.5/release/debug-symbols-on</name>
-			<type>2</type>
-			<locationURI>virtual:/virtual</locationURI>
-		</link>
-		<link>
-			<name>bin/gcc-4.5/release/debug-symbols-on/link-static</name>
-			<type>2</type>
-			<locationURI>virtual:/virtual</locationURI>
-		</link>
-		<link>
-			<name>bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi</name>
-			<type>2</type>
-			<locationURI>virtual:/virtual</locationURI>
-		</link>
-		<link>
-			<name>bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/edge_generator.o</name>
-=======
->>>>>>> df5f0934be559418177ffa9a68c2e561918a310f
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/search/bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/edge_generator.o</locationURI>
-		</link>
-		<link>
-			<name>bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/nbest.o</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/search/bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/nbest.o</locationURI>
-		</link>
-		<link>
-			<name>bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/rule.o</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/search/bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/rule.o</locationURI>
-		</link>
-		<link>
-			<name>bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/vertex.o</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/search/bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/vertex.o</locationURI>
-		</link>
-		<link>
-			<name>bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/vertex_generator.o</name>
-			<type>1</type>
-			<locationURI>PARENT-3-PROJECT_LOC/search/bin/gcc-4.5/release/debug-symbols-on/link-static/threading-multi/vertex_generator.o</locationURI>
-		</link>
 	</linkedResources>
 </projectDescription>
+
