changes for cruise control

--- a/scripts/ems/example/data/weight.ini
+++ b/scripts/ems/example/data/weight.ini
@@ -2,29 +2,12 @@
 ### MOSES CONFIG FILE ###
 #########################
 
-# distortion (reordering) weight
-[weight-d]
-0.3
-0.3
-0.3
-0.3
-0.3
-0.3
-0.3
+[weight]
+Distortion0= 0.3 
+UnknownWordPenalty0= 1 
+WordPenalty0= -1 
+TranslationModel0= 0.2 0.2 0.2 0.2 0.2 
+LexicalReordering0= 0.3 0.3 0.3 0.3 0.3 0.3 
+LM0= 0.5 
 
-# language model weights
-[weight-l]
-0.5
-
-# translation model weights
-[weight-t]
-0.2
-0.2
-0.2
-0.2
-0.2
-
-# word penalty
-[weight-w]
--1
 
